--- a/templates/property/my_requests.html
+++ b/templates/property/my_requests.html
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ request.property.address }}</h5>
                 <p class="card-text">Тип: {{ request.property.get_deal_type_display }}</p>
-                <p class="card-text">Цена: {{ request.property.price }} сум</p>
+                <p class="card-text">Цена: {{ request.property.price }} $</p>
                 <p class="card-text">Дата заявки: {{ request.created_at|date:"d.m.Y H:i" }}</p>
             </div>
         </div>
