--- a/templates/property/property_detail.html
+++ b/templates/property/property_detail.html
@@ -1,24 +1,35 @@
 {% extends 'base.html' %}
 {% block title %}Информация о доме{% endblock %}
 
+{% block extra_css %}
+<style>
+  .img-cover {
+    object-fit: cover;
+    height: 300px;  /* фиксированная высота */
+    width: 100%;
+  }
+</style>
+{% endblock %}
+
 {% block content %}
+<div class="container mt-5">
 <div class="row">
     <div class="col-md-6">
         <div id="propertyCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 {% if property.image1 %}
                 <div class="carousel-item active">
-                    <img src="{{ property.image1.url }}" class="d-block w-100" alt="Фото 1">
+                    <img src="{{ property.image1.url }}" class="d-block w-100 img-cover"style="width: 500px; height: 400px; object-fit: cover;"  alt="Фото 1" >
                 </div>
                 {% endif %}
                 {% if property.image2 %}
                 <div class="carousel-item {% if not property.image1 %}active{% endif %}">
-                    <img src="{{ property.image2.url }}" class="d-block w-100" alt="Фото 2">
+                    <img src="{{ property.image2.url }}" class="d-block w-100 img-cover" style="width: 500px; height: 400px; object-fit: cover;" alt="Фото 2">
                 </div>
                 {% endif %}
                 {% if property.image3 %}
                 <div class="carousel-item {% if not property.image1 and not property.image2 %}active{% endif %}">
-                    <img src="{{ property.image3.url }}" class="d-block w-100" alt="Фото 3">
+                    <img src="{{ property.image3.url }}" class="d-block w-100 img-cover" style="width: 500px; height: 400px; object-fit: cover;" alt="Фото 3">
                 </div>
                 {% endif %}
             </div>
@@ -35,11 +46,13 @@
         <p><strong>Тип сделки:</strong> {{ property.get_deal_type_display }}</p>
         <p><strong>Комнат:</strong> {{ property.rooms }}</p>
         <p><strong>Площадь:</strong> {{ property.area }} м²</p>
-        <p><strong>Цена:</strong> {{ property.price }} сум</p>
+        <p><strong>Цена:</strong> {{ property.price }} $</p>
         <p><strong>Описание:</strong> {{ property.description }}</p>
         {% if user.userprofile.role == 'buyer' %}
-        <a href="{% url 'leave_request' property.id %}" class="btn btn-accent mt-3">Оставить заявку</a>
+        <a href="{% url 'leave_request' property.id %}" class="btn btn-warning mt-3" role="button">Оставить заявку</a>
+
         {% endif %}
     </div>
+</div>
 </div>
 {% endblock %}
