--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -19,5 +19,5 @@
     </div>
     <button type="submit" class="btn btn-accent mt-3">Войти</button>
 </form>
-<p class="mt-3">Нет аккаунта? <a href="{% url 'register' %}">Зарегистрироваться</a></p>
+<p class="mt-3">Нет аккаунта? <a href="{% url 'reg' %}">Зарегистрироваться</a></p>
 {% endblock %}
