--- a/templates/sign/reg.html
+++ b/templates/sign/reg.html
@@ -6,8 +6,33 @@
 <h2>Регистрация</h2>
 <form method="post" class="mt-3">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-accent">Зарегистрироваться</button>
+
+    <label for="{{ form.username.id_for_label }}">Имя пользователя</label><br>
+    {{ form.username }}<br>
+    {% for error in form.username.errors %}
+        <div style="color: red;">{{ error }}</div>
+    {% endfor %}
+
+    <label for="{{ form.email.id_for_label }}">Email</label><br>
+    {{ form.email }}<br>
+    {% for error in form.email.errors %}
+        <div style="color: red;">{{ error }}</div>
+    {% endfor %}
+
+    <label for="{{ form.password.id_for_label }}">Пароль</label><br>
+    {{ form.password }}<br>
+    {% for error in form.password.errors %}
+        <div style="color: red;">{{ error }}</div>
+    {% endfor %}
+
+    <label for="{{ form.role.id_for_label }}">Роль</label><br>
+    {{ form.role }}<br>
+    {% for error in form.role.errors %}
+        <div style="color: red;">{{ error }}</div>
+    {% endfor %}
+
+    <button type="submit" style="margin-top: 10px;">Зарегистрироваться</button>
 </form>
-<p class="mt-3">Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a></p>
+
+<p style="margin-top: 15px;">Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a></p>
 {% endblock %}
